--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "db:migrate": "node db/migrate.mjs",
     "dev": "docker compose up -d && nodemon src/index.js",
     "build": "npm run db:migrate",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "test:e2e": "cd e2e && npm run test"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "ejs": "^3.1.8",
     "fastify": "^4.10.2",
     "fastify-plugin": "^4.4.0",
+    "npm": "^10.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "postgrator": "^7.1.1"
